Set Topics routes update, delete, status by id & documentation
