# routes/topic.routes.js
@@ -7,9 +7,12 @@ const topicController = require('../controllers/topic.controller.js')
 const { validationResult, body, param } = require('express-validator')
 // Set Model
 const models = require('../models');
+// Set Middleware
+let {isSupAdmin} = require('../middleware/isSupAdmin.js');
 
 // Set Routes
 router.get('/', topicController.topics);
+
 router.post('/', [
     body('topic').notEmpty().isLength({ max: 100 }).escape(),
     body('description').notEmpty().escape(),
@@ -22,6 +25,7 @@ router.post('/', [
         res.status(400).json({errors: errors.array()})
     }
 })
+
 router.get('/:id', [
     param('id').notEmpty().escape(), 
 ],  function (req, res) {
@@ -32,6 +36,34 @@ router.get('/:id', [
         res.status(400).json({errors: errors.array()})
     }
 })
+
+router.put('/:id', [
+    param('id').notEmpty().escape(),
+    body('topic').notEmpty().isLength({ max: 100 }).escape(),
+    body('description').notEmpty().escape(),
+    body('hexcolor').notEmpty().isHexColor().escape(),
+], function (req, res) {
+    const errors = validationResult(req); 
+    if (errors.isEmpty()) {
+        topicController.update(req, res); 
+    } else {
+        res.status(400).json({errors: errors.array()})
+    }
+})
+
+router.delete('/:id', [
+    param('id').notEmpty().escape(),
+], isSupAdmin, function (req, res) {
+    const errors = validationResult(req); 
+    if (errors.isEmpty()) {
+        topicController.delete(req, res); 
+    } else {
+        res.status(400).json({errors: errors.array()})
+    }
+})
+
+router.put('/:id/status', topicController.status);
+
 
 // Export Routes
 module.exports = router;
